public class RitiroDomicilio extends Prenotazione {

	private String indirizzoRitiro;

}
