public class TipologiaRifiuto {

	private int idTipologia;
	private String nome;
	private String descrizione;

}
