public class Valutazione {

	private int voto;
	private String commento;

}
