public class Veicolo {

	private int idVeicolo;
	private String targa;
	private double capacitaPeso;
	private double capacitaVolume;

}
