public class ZonaCAP {

	private String CAP;

}
